--- a/parameters.tmpl
+++ b/parameters.tmpl
@@ -1,11 +1,19 @@
-## The format is
-## One parameter per line
-## 1: name of the parameter
-## 2: quoted switch to pass the parameter, it can be an empty string
-## 3: type: i: Integer, c: component, r: real
-## 4: quoted string: c: specify all values; i,r: minimum and maximum values
+## Template for parameter configuration file for Iterated F-Race.
+##
+## The format is one parameter per line. Each line contains:
+##
+## 1: Name of the parameter. An unquoted alphanumeric string,
+##    example: ants
+## 2: Switch to pass the parameter. A quoted (possibly empty) string,
+##    example : "--version1 --ants= "
+## 3: Type. An unquoted single letter, among 
+##     i: Integer, c: component, r: real.
+## 4: For c: All possible values, for i,r: minimum and maximum
+##    values. A variable number of numbers or quoted strings within
+##    parenthesis separated by commas.
+##
 # 1:            2:                   3: 4:
-beamwidth       "--beamwidth"        i  "1, 10"
-mu              "--mu"               r  "1.0, 3.5"
-samplerate      "--sample-rate"      i  "0, 100"
-#samples         "-S"                 i  "1, 5"
+beamwidth       "--beamwidth"        i  ( 1, "10" , "mmas a" , 0.335, "0.335")
+mu              "--mu"               r  (1.0, 3.5)
+samplerate      "--sample-rate"      i  (0, 100)
+#samples         "-S"                 i  (1, 5)
