--- a/parameters.tmpl
+++ b/parameters.tmpl
@@ -10,11 +10,15 @@
 ## 3: Type. An unquoted single letter, among 
 ##     i: Integer, c: component, r: real.
 ## 4: For c: All possible values, for i,r: minimum and maximum
-##    values. A variable number of numbers or quoted strings within
+##    values. A variable number of numbers or unquoted strings within
 ##    parenthesis separated by commas.
+## 5: Optionally, a character '|' followed by a parameter name
+##    followed by a set of values enclosed in parenthesis.
+##    Example: | mode (acs, ras)
 ##
 # 1:            2:                   3: 4:
-beamwidth       "--beamwidth "        i  ( 1, "10" , "mmas a" , 0.335, "0.335")
-mu              "--mu "               r  (1.0, 3.5)
-samplerate      "--sample-rate "      i  (0, 100)
-#samples         "-S "                 i  (1, 5)
+param1          "--param1 "          i  (1, 10) | mode (x1, x2)
+param2          "--param2 "          i  (1, 10)
+mode            "--"                 c  ( x1 , x2, x3)
+real            "--paramreal="       r  (1.5, 4.5)
+#unused         "-u "                c  (1, 2, 10, 20)
