--- a/TUNE/tune-main.tmpl
+++ b/TUNE/tune-main.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# This program launch one run of iterated F-Race.
-# It should execute tune.R as some point like in:
+# This program launches one run of iterated F-Race.
+# It should execute tune.R at some point like in:
 #
 #R --vanilla --slave < tune.R
 #
