* hooks/tune-main.tmpl: update comments
git-svn-id: file:///home/manu/work/irace/svn/trunk@17 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/hooks/tune-main.tmpl
+++ b/hooks/tune-main.tmpl
@@ -6,5 +6,5 @@
 #R --vanilla --slave < tune.R
 #
 # However, it could be much more complicated, see the examples in
-# hooks/examples/
+# examples/
 
