* hooks/hook-instance-finished.tmpl: Update comment.  * hooks/hook-run.tmpl: Update comment.
git-svn-id: file:///home/manu/work/irace/svn/trunk@29 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/hooks/hook-instance-finished.tmpl
+++ b/hooks/hook-instance-finished.tmpl
@@ -3,7 +3,7 @@
 # This hook is run for each candidate after all candidate
 # configurations have been run on a single instance.
 #
-# Check the examples in hooks/examples/
+# Check the examples in examples/
 #
 # PARAMETERS:
 # $1 is the instance name
