--- a/hooks/hook-run.tmpl
+++ b/hooks/hook-run.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 ###############################################################################
 # This hook is the command that is executed every run.
-# Check the examples in hooks/examples/
+# Check the examples in examples/
 #
 # PARAMETERS:
 # $1 is the candidate number
@@ -13,7 +13,7 @@
 # Exit with 0 if no error, with 1 in case of error
 ###############################################################################
 
-EXE=/home/manu/personal/iterated-f-race/jeremie/Program/beamaco_tsptw
+EXE=~/bin/program
 FIXED_PARAMS=""
 CANDIDATE=$1
 INSTANCE=$2
