* README: Update.  * hooks/tune-main.tmpl: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@36 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/hooks/tune-main.tmpl
+++ b/hooks/tune-main.tmpl
@@ -3,7 +3,9 @@
 # This program launches one run of iterated F-Race.
 # It should execute tune.R at some point like in:
 #
-#R --vanilla --slave < tune.R
+#R --vanilla --slave --args $* < tune.R
+#
+# All parameters are passed down to tune.R
 #
 # However, it could be much more complicated, see the examples in
 # examples/
