* hrace.R: Use .tune.race.wrapper.  * tune-conf.tmpl: Add comment about .tune.execdir.  * tune.R: Read command-line parameters.  * util.R: Cleanup. Fix wrong variable name.  * race-wrapper.R: Make hook-run and hook-instance-finished be    relative to cwd.  * ifrace: New file.  * submitjobs.sh: Adjust paths.  * hooks/tune-main.tmpl: Update calling ifrace.  * examples/tune-main-basic: Update calling ifrace.  * examples/tune-main-cluster: Update calling ifrace.  * Instances: Delete instances directory.  * clean.sh: Delete.  * README: Update.  * submitJobsQ.sh: Delete.  * readparameters.R: Minor.
git-svn-id: file:///home/manu/work/irace/svn/trunk@40 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/hooks/tune-main.tmpl
+++ b/hooks/tune-main.tmpl
@@ -1,11 +1,13 @@
 #!/bin/bash
 
 # This program launches one run of iterated F-Race.
-# It should execute tune.R at some point like in:
+# It should execute ifrace at some point like in:
 #
-#R --vanilla --slave --args $* < tune.R
+#BINDIR=$1
+#shift
+#$BINDIR/ifrace $* 
 #
-# All parameters are passed down to tune.R
+# All parameters are passed down to ifrace
 #
 # However, it could be much more complicated, see the examples in
 # examples/
