--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -13,6 +13,7 @@ extra.description <- "Iterative F-Race for tuning Beam-ACO"
 executable <- ""
 
 ## Directory where the programs will be run
+## FIXME: This does not work yet, the program will be run in TUNE-number
 .tune.execdir <- ""
 
 ## FIXME: What is this ????
