* hrace.R (hrace.wrapper): Save stats and full results in    execdir. Use global prob.vector.type.c.list.  * race-wrapper.R (canonical.dirname): New.    (race.init): Handle a instances list file.    (race.wrapper): Handle per-instance parameters.  * submitjobs.sh: Add EXECDIR parameter.  * README: Mention instance list file.  * tune.conf.tmpl (.tune.tuning.instances.file): New var.  * tune.R: Print its value. Set width to 500 chars to avoid wrapping.  * util.R (generate.configurations.normal): Cleanup. Fix bug with null    prob vector.
git-svn-id: file:///home/manu/work/irace/svn/trunk@56 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -22,6 +22,9 @@ executablecomp <- ""
 ## Folder where tuning instances are located.
 .tune.tuning.instances.dir <- "./Instances"
 
+## File with a list of instances and (optionally) parameters
+.tune.tuning.instances.file <- "./instances-list.txt"
+
 ## FIXME: What is this ????
 test.instance.dir <- ""
 
