hooks/  * hook-run.tmpl: Add warning about exec dir.  * hook-instance-finished.tmpl: Likewise.
git-svn-id: file:///home/manu/work/irace/svn/trunk@59 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/hooks/hook-instance-finished.tmpl
+++ b/hooks/hook-instance-finished.tmpl
@@ -5,6 +5,10 @@
 #
 # Check the examples in examples/
 #
+# WARNING: This hook is run in a temporary directory, the same
+# directory where hook-run is executed. This means that you should
+# always use absolute paths.
+#
 # PARAMETERS:
 # $1 is the instance name
 # $2 is the candidate number
