--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -4,10 +4,10 @@
 ## configuration file that is not R format.
 
 ## FIXME: Add a description for this, what is it used for?
-experiment.name <- "F-RACE applied to Beam-ACO"
+experiment.name <- "F-RACE"
 
 ## FIXME: Add a description for this,  what is it used for?
-extra.description <- "Iterative F-Race for tuning Beam-ACO"
+extra.description <- "A description"
 
 ## FIXME: This is not used anymore and should be deleted everywhere.
 executable <- ""
@@ -23,7 +23,7 @@ executablecomp <- ""
 .tune.tuning.instances.dir <- "./Instances"
 
 ## File with a list of instances and (optionally) parameters
-.tune.tuning.instances.file <- "./instances-list.txt"
+.tune.tuning.instances.file <- ""
 
 ## FIXME: What is this ????
 test.instance.dir <- ""
