* tune-conf.tmpl: Add more comments.
git-svn-id: file:///home/manu/work/irace/svn/trunk@62 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -22,7 +22,10 @@ executablecomp <- ""
 ## Folder where tuning instances are located.
 .tune.tuning.instances.dir <- "./Instances"
 
-## File with a list of instances and (optionally) parameters
+## File with a list of instances and (optionally) parameters. If this
+## is empty, then all instances are taken from
+## .tune.tuning.instance.dir. Otherwise, this is a list of filenames
+## relative to .tune.tuning.instance.dir.
 .tune.tuning.instances.file <- ""
 
 ## FIXME: What is this ????
