* tune.R (.tune.hook.run,.tune.hook.instance.finished): New vars.  * tune-conf.tmpl: Add them.  * race-wrapper.R: Use them.
git-svn-id: file:///home/manu/work/irace/svn/trunk@65 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -16,6 +16,11 @@ executable <- ""
 ## FIXME: This does not work yet, the program will be run in TUNE-number
 .tune.execdir <- ""
 
+# The hook to run candidates (see templates)
+.tune.hook.run <- "./hook-run"
+# The hook to evaluate  candidates (see templates)
+.tune.hook.instance.finished <- "./hook-instance-finished"
+
 ## FIXME: What is this ????
 executablecomp <- ""
 
