--- a/hooks/tune-main.tmpl
+++ b/hooks/tune-main.tmpl
@@ -3,9 +3,13 @@
 # This program launches one run of iterated F-Race.
 # It should execute ifrace at some point like in:
 #
-#BINDIR=$1
-#shift
-#$BINDIR/ifrace $* 
+# The simplest is to just invoke ifrace locally
+# BINDIR=$1
+# EXECDIR=$2
+# shift 2
+# exec 1> $EXECDIR/ifrace-$$.stdout 
+# exec 2> $EXECDIR/ifrace-$$.stderr
+# exec $BINDIR/ifrace $EXECDIR $*
 #
 # All parameters are passed down to ifrace
 #
