--- a/tune-conf.tmpl
+++ b/tune-conf.tmpl
@@ -36,14 +36,18 @@ executablecomp <- ""
 ## FIXME: What is this ????
 test.instance.dir <- ""
 
-## Maximum number of experiments
-maxAllotedExperiments <- 1000
+# Whether to sample from the set of all instances.
+.tune.sample.instances <- TRUE
 
 ## we need instances maximum 2 times the normal number of rounds (6) per iteration
 ##maxInstance <- 2*round(maxExperiments/nrow(candidate.configurations.dataframe))
 ## modified the maxInstance to infinity
 ## ??? What is this??
 maxInstance <- 150
+
+## Maximum number of experiments
+maxAllotedExperiments <- 1000
+
 
 ## File that contains the description of the parameters.
 parameters.file <- "./parameters.txt"
