* main.R: Do not mention hooks/.  * templates/tune-conf.tmpl: Minor doc fix.
git-svn-id: file:///home/manu/work/irace/svn/trunk@432 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/templates/tune-conf.tmpl
+++ b/templates/tune-conf.tmpl
@@ -28,7 +28,7 @@
 ## If empty or NULL, do not use a file.
 # candidatesFile <- ""
 
-## The script called by Race for each candidate that
+## The script called for each candidate that
 ## launches the program to be tuned. See templates/.
 # hookRun <- "./hook-run"
 
