--- a/templates/tune-conf.tmpl
+++ b/templates/tune-conf.tmpl
@@ -78,7 +78,7 @@
 # sampleInstances <- 1
 
 ## Specifies the statistical test type: F-test or t-test.
-# testType <- F-test
+# testType <- "F-test"
 
 ## Specifies after how many instances are seen before the first test
 ## is performed.
