If timeBudget > 0, then hook-evaluate must print 2 numbers: cost time. Otherwise, hook-evaluate may print one or two numbers. If two numbers are given, then the time is only used for reporting total time used and nothing else. If one number, then we do as currently, which is the most used case, that is, we don't care about time because time is fixed.
 * irace.R: timeUsed comes from results$time now not from cost.
 * race-wrapper.R: Handle one or two numbers.
 * race.R: New Time matrix, store second number if given.
 * templates/hook-evaluate.tmpl: Mention the option of returning also time.


git-svn-id: file:///home/manu/work/irace/svn/trunk@463 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/templates/hook-evaluate.tmpl
+++ b/templates/hook-evaluate.tmpl
@@ -11,7 +11,7 @@
 # $3 is the total number of candidates alive in this iteration
 #
 # RETURN VALUE:
-# This hook should print a single numerical value
+# This hook should print one or two, if budget given as time, numerical values.
 ###############################################################################
 INSTANCE=$1
 CANDIDATE=$2
@@ -38,6 +38,8 @@ error() {
 # the first column of the only line starting with a digit.
 if [ -s "${STDOUT}" ]; then
     COST=$(cat ${STDOUT} | grep -e '^[[:space:]]*[+-]\?[0-9]' | cut -f1)
+    # If budget is given as time, this should print also the time as:
+    # echo $COST $TIME
     echo "$COST"
     rm -f "${STDOUT}" "${STDERR}"
     exit 0
