* inst/templates/tune-conf.tmpl: Minor doc fixes.
git-svn-id: file:///home/manu/work/irace/svn/trunk@626 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -1,10 +1,10 @@
 ############################################################################
-## Configuration for Iterated Race.
+## Configuration for Iterated Race (iRace).
 ############################################################################
 
-## To use a default value for one of the parameter of I-Race, you
-## should simply not specify this parameter (comment it in this file,
-## and do not give any value on the command line).
+## To use the default value of a parameter of iRace, simply do not
+## this parameter (comment it out in this file, and do not give any
+## value on the command line).
 
 ## File that contains the description of the parameters.
 # parameterFile <- "./parameters.txt"
@@ -28,8 +28,8 @@
 ## If empty or NULL, do not use a file.
 # candidatesFile <- ""
 
-## The script called for each candidate that
-## launches the program to be tuned. See templates/.
+## The script called for each candidate that launches the program to be tuned. 
+## See templates/hook-run.tmpl
 # hookRun <- "./hook-run"
 
 ## Optional script that provides a numeric value for each candidate.
