--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -3,8 +3,8 @@
 ############################################################################
 
 ## To use the default value of a parameter of iRace, simply do not
-## this parameter (comment it out in this file, and do not give any
-## value on the command line).
+## set this parameter (comment it out in this file, and do not give
+## any value on the command line).
 
 ## File that contains the description of the parameters.
 # parameterFile <- "./parameters.txt"
