* The default execDir is the current directory.
git-svn-id: file:///home/manu/work/irace/svn/trunk@643 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -10,7 +10,7 @@
 # parameterFile <- "./parameters.txt"
 
 ## Directory where the programs will be run.
-# execDir <- "./TUNE"
+# execDir <- "./"
 
 ## File (if relative path, relative to execDir) to save tuning 
 ## results as an R dataset.
