* instanceDir is relative to working directory.
git-svn-id: file:///home/manu/work/irace/svn/trunk@644 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -12,12 +12,12 @@
 ## Directory where the programs will be run.
 # execDir <- "./"
 
-## File (if relative path, relative to execDir) to save tuning 
-## results as an R dataset.
+## File to save tuning results as an R dataset, either absolute path
+## or relative to execDir.
 # logFile <- "./irace.Rdata"
 
 ## Folder where tuning instances are located, either absolute or
-## relative to execDir.
+## relative to working directory.
 # instanceDir <- "./Instances"
 
 ## File with a list of instances and (optionally) parameters.
