* inst/templates/tune-conf.tmpl: Fix wording.
git-svn-id: file:///home/manu/work/irace/svn/trunk@647 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -1,10 +1,10 @@
-############################################################################
+###################################################### -*- mode: r -*- #####
 ## Configuration for Iterated Race (iRace).
 ############################################################################
 
-## To use the default value of a parameter of iRace, simply do not
-## set this parameter (comment it out in this file, and do not give
-## any value on the command line).
+## To use the default value of a parameter of iRace, simply do not set
+## the parameter (comment it out in this file, and do not give any
+## value on the command line).
 
 ## File that contains the description of the parameters.
 # parameterFile <- "./parameters.txt"
