* R/main.R: Document that firstTest must be a multiple of eachTest.  * inst/templates/tune-conf.tmpl: Likewise.  * R/readConfiguration.R: Make it an error if not.
git-svn-id: file:///home/manu/work/irace/svn/trunk@822 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -74,11 +74,11 @@
 ## Specifies the statistical test type: F-test or t-test.
 # testType <- "F-test"
 
-## Specifies how many instances are seen before the first test
-## is performed.
+## Specifies how many instances are seen before the first elimination
+## test. It must be a multiple of eachTest.
 # firstTest <- 5
 
-## Specifies how many instances are seen between tests.
+## Specifies how many instances are seen between elimination tests.
 # eachTest <- 1
 
 ## The minimum number of candidates that should survive to continue one
