* Implement --confidence parameter.
git-svn-id: file:///home/manu/work/irace/svn/trunk@831 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -117,5 +117,8 @@
 ## of the probabilistic model.
 # softRestart <- 1
 
+## Confidence level for the elimination test.
+# confidence <- 0.95
+
 ## END of configuration file
 ############################################################################
