Implement recoveryFile: merge -r593:837 ^/branches/leslie .
git-svn-id: file:///home/manu/work/irace/svn/trunk@838 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -120,5 +120,9 @@
 ## Confidence level for the elimination test.
 # confidence <- 0.95
 
+## File to recover the execution of irace
+## if is empty or NULL recovery is not performed. 
+# recoveryFile <- ""
+
 ## END of configuration file
 ############################################################################
