--- a/inst/templates/forbidden.tmpl
+++ b/inst/templates/forbidden.tmpl
@@ -1,4 +1,7 @@
-## Template for specifying forbidden parameter configurations for Iterated Race.
+## Template for specifying forbidden parameter configurations for irace.
+##
+## This filename must be specified via the --forbidden-file command-line option
+## (or forbiddenFile in tune-conf).
 ##
 ## The format is one constraint per line. Each constraint is a logical
 ## expression (in R syntax). If a parameter configuration
