* inst/templates/hook-run.tmpl: Add hint about ignoring segfaults.
git-svn-id: file:///home/manu/work/irace/svn/trunk@940 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/hook-run.tmpl
+++ b/inst/templates/hook-run.tmpl
@@ -33,6 +33,8 @@ STDERR=c${CANDIDATE}.stderr
 # exit 1
 # 
 # Otherwise, save the output to a file, and parse the result from it.
+# (If you wish to ignore segmentation faults you can use '{}' around
+# the command.)
 $EXE ${FIXED_PARAMS} -i $INSTANCE ${CAND_PARAMS} 1> ${STDOUT} 2> ${STDERR}
 
 error() {
