* inst/templates/tune-conf.tmpl: Wrap long lines.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1031 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -61,8 +61,8 @@
 ## to current directory.
 # testInstanceDir <- ""
 
-## File containing a list of test instances and optionally additional parameters for them.
-## If empty or NULL, do not use a file.
+## File containing a list of test instances and optionally additional
+## parameters for them.  If empty or NULL, do not use a file.
 # testInstanceFile <- ""
 
 ## Number of elite candidates returned by irace that will be tested.
