* inst/templates/tune-conf.tmpl: Document new interface of hookRunParallel.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1167 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/tune-conf.tmpl
+++ b/inst/templates/tune-conf.tmpl
@@ -32,11 +32,12 @@
 ## See templates/hook-run.tmpl
 # hookRun = "./hook-run"
 
-## Optional R function to provide custom parallelization of hook.run.
-## The signature of this function should be 'function(candidates,
-## hook.run, instance, extra.params, config)' where 'candidates' is a
-## list of candidates, hook.run is an R function and the rest are
-## parameters to hook.run (see hook.run.default)
+## Optional R function to provide custom parallelization of hook.run.  The
+## signature of this function should be 'function(experiments, hook.run,
+## config)', where hook.run is an R function, 'experiments' is a list such that
+## each of its elements will be the argument to one call of hook.run, and
+## config will also be passed to every call. See help(hook.run.default) for
+## details.
 # hookRunParallel = NULL
 
 ## Optional script that provides a numeric value for each candidate.
