* Complete a bit more the docs.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1451 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -35,6 +35,11 @@
 ## Number of times to retry a call to target-runner if the call failed.
 # targetRunnerRetries = 0
 
+## Optional data passed to targetRunner. This is ignored by the default
+## targetRunner function, but it may be used by custom
+## targetRunner functions to pass persistent data around.
+# targetRunnerData = NULL
+
 ## Optional R function to provide custom parallelization of target.runner.  The
 ## signature of this function should be 'function(experiments, target.runner,
 ## scenario)', where target.runner is an R function, 'experiments' is a list such that
