* Add more documentation.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1452 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -42,10 +42,10 @@
 
 ## Optional R function to provide custom parallelization of target.runner.  The
 ## signature of this function should be 'function(experiments, target.runner,
-## scenario)', where target.runner is an R function, 'experiments' is a list such that
-## each of its elements will be the argument to one call of target.runner, and
-## scenario will also be passed to every call. See help(target.runner.default) for
-## details.
+## scenario)', where target.runner is an R function, 'experiments' is a list
+## such that each of its elements will be the argument to one call of
+## target.runner, and scenario will also be passed to every call. See
+## help(target.runner.default) for details.
 # targetRunnerParallel = NULL
 
 ## Optional script that provides a numeric value for each configuration.
