* testNbElites defaults now to 1. This (should) mean that we test by default if test instances are provided.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1462 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -64,8 +64,9 @@
 ## parameters for them.  If empty or NULL, do not use a file.
 # testInstancesFile = ""
 
-## Number of elite configurations returned by irace that will be tested.
-# testNbElites = 0
+## Number of elite configurations returned by irace that will be tested
+## if test instances are provided.
+# testNbElites = 1
 
 ## Enable/disable testing the elite configurations found at each iteration.
 # testIterationElites = 0
