--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -54,7 +54,17 @@
 
 ## The maximum number of runs (invocations of targetRunner) that will
 ## performed. It determines the (maximum) budget of experiments for the tuning.
-# maxExperiments = 1000
+# maxExperiments = 0
+
+## The maximum time in seconds for the runs of targetRunner that will be 
+## performed. The mean execution time is estimated to calculate the maximum number 
+## of experiments. When this is used targetRunner must return the execution time
+## as second output.
+# maxTime = 0             
+
+## The percentage of the budget used for estimating the mean execution time.
+## Only used when maxTime > 0.
+# budgetEstimation = 0.02
 
 ## Directory where testing instances are located, either absolute or relative
 ## to current directory.
