* R/main.R: Fix doc of softRestartThreshold.  * inst/templates/scenario.txt.tmpl: Likewise.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1850 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -161,6 +161,10 @@
 ## of the probabilistic model.
 # softRestart = 1
 
+## Soft restart threshold value for numerical parameters. If NA, it is computed
+## as 10^-digits.
+# softRestartThreshold = NA
+
 ## Confidence level for the elimination test.
 # confidence = 0.95
 
