instance.id identifies an instance, not an instance,seed pair Update examples, templates and documentation.
Suggested by André de Souza Andrade.


git-svn-id: file:///home/manu/work/irace/svn/trunk@2060 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/inst/templates/target-evaluator.tmpl
+++ b/inst/templates/target-evaluator.tmpl
@@ -33,8 +33,8 @@ TOTALCANDIDATES="$5"
 shift 5 || error "Not enough parameters"
 ALLIDS=$*
 
-STDOUT=c${CANDIDATE}-${INSTANCEID}.stdout
-STDERR=c${CANDIDATE}-${INSTANCEID}.stderr
+STDOUT=c${CANDIDATE}-${INSTANCEID}-${SEED}.stdout
+STDERR=c${CANDIDATE}-${INSTANCEID}-${SEED}.stderr
 
 
 # # This may be used to introduce a delay if there are filesystem
