Adaptive capping is now enabled by default if `maxTime > 0` and `maxBound > 0`.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -174,9 +174,9 @@
 # repairConfiguration = ""
 
 ## Enable the use of adaptive capping, a technique designed for minimizing the
-## computation time of configurations. This is only available when elitist is
-## active.
-# capping = 0
+## computation time of configurations. Capping is enabled by default if
+## elitist is active, maxTime > 0 and boundMax > 0.
+# capping = NA
 
 ## Measure used to obtain the execution bound from the performance of the
 ## elite configurations: median, mean, worst, best.
