* New scenario option minMeasurableTime.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -73,6 +73,9 @@
 ## computation time of a configuration. Only used when maxTime > 0
 # budgetEstimation = 0.02
 
+## Minimum time unit that is still (significantly) measureable.
+# minMeasurableTime = 0.01
+
 ## Maximum number of decimal places that are significant for numerical
 ## (real) parameters.
 # digits = 4
