* scripts/irace_options.json: Fix documentation of nbIterations.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -84,7 +84,7 @@
 ## messages. Higher values provide more verbose debug messages.
 # debugLevel = 0
 
-## Number of iterations.
+## Maximum number of iterations.
 # nbIterations = 0
 
 ## Number of runs of the target algorithm per iteration.
